Last fixes while behind it works

--- a/frontend/src/components/adminComponents/adminContainer/AdminContainer.scss
+++ b/frontend/src/components/adminComponents/adminContainer/AdminContainer.scss
@@ -2,7 +2,7 @@
 
 .section-container-admins-cards {
     width: 100%;
-    background-color: $dark-mode-text-text-secondary-2;
+    background-color: $gray;
     @include flex-items(column);
     gap: 1em;
 }
