--- a/frontend/src/components/adminComponents/schoolContainer/SchoolContainer.scss
+++ b/frontend/src/components/adminComponents/schoolContainer/SchoolContainer.scss
@@ -2,7 +2,7 @@
 
 .section-school-container {
     width: 100%;
-    background-color: $dark-mode-text-text-secondary-2;
+    background-color: $gray;
     @include flex-items(column);
     gap: 1em;
     padding: 1em 0;
